--- a/deploy/posthook/f5-update-dns-load-balancer.yaml
+++ b/deploy/posthook/f5-update-dns-load-balancer.yaml
@@ -10,9 +10,9 @@ spec:
   tower_auth_secret: toweraccess
   job_template_name: f5-update-dns-load-balancer
   extra_vars:
-    API_DOMAIN: demo.red-chesterfield.com
+    API_DOMAIN: example.lab
     # The AWS Route53 NS Record must exist with NameServers:
     # ns1.f5cloudservices.com
     # ns2.f5cloudservices.com
-    GSLB_ZONE: www-apps
-    BASE_DOMAIN: oscar.demo.red-chesterfield.com
+    GSLB_ZONE: f5
+    BASE_DOMAIN: demolab.pro
